<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gamePage">
    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/header"
        android:textSize="40sp"/>
    <TextView
        android:id="@+id/gameClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/clock"
        android:textSize="25sp"
        android:layout_marginTop="0dp"/>
    <TextView
        android:id="@+id/leftTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scoreLeft"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="0dp"
        android:text="@string/leftTeam"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/rightTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scoreRight"
        android:layout_marginRight="100dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        android:text="@string/rightTeam"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/scoreLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/leftScore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameClock"
        android:layout_marginLeft="100dp"
        android:textSize="50sp"/>

    <TextView
        android:id="@+id/scoreRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:text="@string/rightScore"
        android:textSize="50sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gameClock" />

    <Button
        android:id="@+id/add3left"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leftTeam"
        android:layout_marginLeft="75dp"
        android:text="@string/add3text"
        android:onClick="addScore"/>

    <Button
        android:id="@+id/add3right"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rightTeam"
        android:text="@string/add3text"
        android:onClick="addScore"/>
    <Button
        android:id="@+id/add2left"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add3left"
        android:layout_marginLeft="75dp"
        android:text="@string/add2text"
        android:onClick="addScore"/>

    <Button
        android:id="@+id/add2right"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add3right"
        android:text="@string/add2text"
        android:onClick="addScore"/>
    <Button
        android:id="@+id/add1left"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add2left"
        android:layout_marginLeft="75dp"
        android:text="@string/add1text"
        android:onClick="addScore"/>

    <Button
        android:id="@+id/add1right"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add2right"
        android:text="@string/add1text"
        android:onClick="addScore"/>

    <Button
        android:id="@+id/reset"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add1right"
        android:text="@string/reset"
        android:onClick="reset"/>
    <Button
        android:id="@+id/startClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset"
        android:text="@string/startClock"
        android:onClick="startClock"/>
    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startClock"
        android:text="@string/save"
        android:onClick="save"/>
    <Button
        android:id="@+id/newTeams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent "
        android:text="@string/newTeams"
        android:onClick="newTeams"/>

</androidx.constraintlayout.widget.ConstraintLayout>